# zhihuishu-pro-ppt-downloader

./: .gitignore  GEMINI.md  README.md  pyproject.toml  run_full_process.ps1
doc/: zhihuishu-ppt-reverse-analysis-report.md  zhihuishu-pro-singlecourse-exploration.md
src/zhihuishu_pro_ppt_downloader/: __init__.py  cli.py  manifest.py
tampermonkey/: zhihuishu-pro-ppt-downloader.user.js
