[project]
name = "zhihuishu-pro-ppt-downloader"
version = "0.1.0"
description = "Tampermonkey-assisted Zhihuishu PPT extraction with Python manifest auditing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "comtypes>=1.4.0",
    "pypdf>=4.0.0",
]

[project.scripts]
zhihuishu-pro-ppt-downloader = "zhihuishu_pro_ppt_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zhihuishu_pro_ppt_downloader"]
